--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">My Siam</string>
+    <string name="title">Bike Service</string>
+    <string name="login">Login</string>
 </resources>
