--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="login">Login</string>
     <string name="user">User</string>
     <string name="password">password</string>
+    <string name="new_register">New Register</string>
+    <string name="name">Name</string>
 </resources>
